altera textos revisados pela Bruna, com correção para PT-pt

--- a/index.html
+++ b/index.html
@@ -82,17 +82,12 @@
                     </button>
                     <dialog id="dialog-automacao" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Automação</h2>
                         <p>
-                            A Bistec, já consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas. Adquira a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes, e esteja em dia com a legislação fiscal.
+                            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
                         </p>
                         <p>
-                            Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, computadores etc.
-                        </p>
-                        <p>
-                            Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
-                        </p>
-                        <p>
-                            Agora, se você esta procurando a melhor solução para gestão da sua empresa, clique <strong><a href="https://hiper.com.br/experimente-gratis?HCode=BIS01625" target="_blank" rel="noopener noreferrer">aqui</a></strong> e Experimente grátis por 7 dias!<br/>
+                            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
                         </p>
                     </dialog>
                 </div>
@@ -109,14 +104,12 @@
                     </button>
                     <dialog id="dialog-cloud" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Cloud</h2>
                         <p>
-                            As informações corporativas estão cada vez mais digitalizadas e online. Por isso, as empresas devem se prevenir contra a perda de informações importantes e, para tanto, precisam adotar políticas de backup eficazes que contemplem o armazenamento fora do ambiente produtivo.
+                            As informações corporativas estão cada vez mais digitalizadas e online, por isso as empresas devem se prevenir contra a perda de informações importantes. Com essa solução você ajuda a proteger os arquivos que a sua empresa precisa e os restaura rapidamente após uma falha do sistema ou perda de dados.
                         </p>
                         <p>
-                            Com o backup na nuvem você resguarda o seu negócio, ajudando a proteger os arquivos importantes de que a sua empresa precisa. Restaure rapidamente os arquivos após uma falha do sistema ou perda de dados, para retomar o funcionamento normal logo em seguida.
-                        </p>
-                        <p>
-                            O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com a <a href="https://www.bistec.com.br/portfolio/bistec-lgpd/">Lei Geral de Proteção de Dados (LGPD)</a>.
+                            O Bistec Cloud é a solução ideal de backup em nuvem, seguro e elástico, sem custos de investimentos em infraestrutura e de acordo com o Regulamento Geral de Proteção de Dados (GDPR).
                         </p>
                     </dialog>
                 </div>
@@ -133,20 +126,12 @@
                     </button>
                     <dialog id="dialog-edu" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Edu</h2>
                         <p>
-                            A Bistec Edu é a divisão de <strong>prestação de serviços de treinamentos em informática</strong> e de desenvolvimento profissional e gerencial.
+                            Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.
                         </p>
                         <p>
-                            Contamos com profissionais com mais de 25 anos de experiência acadêmica e certificado educador Google nível 1. Prestando serviços para <strong>universidades e empresas de toda a Baixada Santista.</strong>
-                        </p>
-                        <p>
-                            Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: <strong>o usuário.</strong>
-                        </p>
-                        <p>
-                            Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
-                        </p>
-                        <p>
-                            O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
+                            Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
                         </p>
                     </dialog>
                 </div>
@@ -183,14 +168,12 @@
                     </button>
                     <dialog id="dialog-outsourcing" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Outsourcing</h2>
                         <p>
-                            Por um valor mensal, sua empresa pode contar com suporte técnico telefônico e on-line, além de visitas técnicas preventivas e corretivas. Realizamos manutenções periódicas e resolvemos casos mais graves em seus equipamentos, com o compromisso de atender de forma rápida e eficiente.
+                            Por uma mensalidade, a sua empresa pode contar com suporte técnico telefónico e online, bem como visitas técnicas preventivas e corretivas. Realizamos a manutenção periódica e resolvemos problemas mais graves, sejam eles equipamentos ou software, com o serviço dos nossos técnicos, treinados para servir a sua empresa de forma rápida e eficaz.
                         </p>
                         <p>
-                            Nossos técnicos são treinados e capacitados para instalar hardware e software em sua empresa. Isto torna o serviço muito mais rápido e eficaz. Evitando o seu deslocamento, realizamos uma visita técnica a sua empresa para solucionar o problema, seja ele de equipamento ou de software.
-                        </p>
-                        <p>
-                            Ao contratar nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa e pode contar com todo o nosso suporte técnico.<br>
+                            Ao contratar os nossos serviços e optar pelo atendimento de final de semana e feriados, a sua empresa não fica na mão quando você mais precisa.
                         </p>
                     </dialog>
                 </div>
@@ -207,23 +190,12 @@
                         </button>
                     <dialog id="dialog-renting" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Renting</h2>
                         <p>
-                            Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos.
+                            Mantenha a sua liquidez adquirindo os sistemas de gestão e TI através da locação de equipamentos. Esta solução permite que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos, assim melhorando a sua classificação de crédito.
                         </p>
                         <p>
-                            Esta é a solução mais atrativa do mercado, permitindo que você preserve as suas linhas de crédito junto aos bancos e assim faça um investimento rentável durante o ciclo de vida dos seus equipamentos. Melhore assim a sua classificação de crédito.
-                        </p>
-                        <p>Principais vantagens:</p>
-                        <ul>
-                            <li>Não descapitaliza a empresa</li>
-                            <li>Incentivos fiscais</li>
-                            <li>Parcelas Fixas</li>
-                            <li>Equipamentos sempre Atualizados</li>
-                            <li>Maior Eficiência em TI</li>
-                            <li>Locação 100% sem entrada</li>
-                        </ul>
-                        <p>
-                            Tenha acesso a tecnologia de ponta, e quando o contrato acabar, você pode fazer upgrade nos equipamentos.
+                            Tenha acesso à tecnologia de ponta e, quando o contrato acabar, você pode fazer upgrade nos equipamentos.
                         </p>
                     </dialog>
                 </div>
@@ -240,21 +212,10 @@
                         </button>
                     <dialog id="dialog-soft" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
+                        <h2>Bistec Soft</h2>
+                        <h3>Crie já o seu site institucional conosco!</h3>
                         <p>
-                            Se você esta procurando um Software para Automação Comercial, clique <strong><a href="https://www.bistec.com.br/portfolio/bistec-automacao/">aqui</a></strong> e você será direcionado para a página BISTEC Automação.
-                        </p>
-                        <p>Possuímos soluções para diversos segmentos.</p>
-                        <ul>
-                            <li>Desenvolvimento de Sites institucionais / e-commerce + domínio + hospedagem + manutenção + suporte</li>
-                            <li>Solução de chat online para sites. Clique <a href="https://www.jivochat.com.br/?partner_id=23677&amp;pricelist_id=114&amp;lang=pt" target="_blank" rel="noopener noreferrer"><strong>aqui</strong></a> e teste por 14 dias</li>
-                            <li>Software de roteirização (logística)</li>
-                            <li>Antivírus</li>
-                            <li>Realidade Aumentada</li>
-                        </ul>
-
-                        <h4>Crie já o seu site institucional</h4>
-                        <p>
-                            Tenha um site (www.nomedaminhaempresa.com.br) hospedado em servidor com alta disponibilidade e contas de e-mail profissionais para sua empresa. (contato@nomedaminhaempresa.com.br)
+                            Tenha um site institucional (www.nomedaminhaempresa.com.br) hospedado em servidor com alta disponibilidade e contas de e-mail profissionais para sua empresa (contato@nomedaminhaempresa.com.br).
                         </p>
                         <p>Contrate agora e obtenha:</p>
                         <ul>
@@ -263,6 +224,15 @@
                             <li>SSL Grátis</li>
                             <li>Contas de e-mail ilimitadas</li>
                         </ul>
+                        <p>Possuímos também outras soluções para diversos segmentos, como:</p>
+                        <ul>
+                            <li>Desenvolvimento de e-commerce + domínio + hospedagem + manutenção + suporte;</li>
+                            <li>Solução de chat online para sites. Clique <a href="https://www.jivochat.com.br/?partner_id=23677&amp;pricelist_id=114&amp;lang=pt" target="_blank" rel="noopener noreferrer"><strong>aqui</strong></a> e teste por 14 dias</li>
+                            <li>Software de roteirização (logística)</li>
+                            <li>Antivírus</li>
+                            <li>Realidade Aumentada</li>
+                        </ul>
+                        </p>
                     </dialog>
                 </div>
         </section>
@@ -270,9 +240,9 @@
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-msp.png" alt="Bistec MSP">
                 <div class="texto-produtos">
-                    <h2>Vestibulum accumsan sem ornare libero sodales elementum</h2>
+                    <h2>Você sabe o que é um MSP?</h2>
                     <h4>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                        A Bistec atua utilizando ferramentas gerenciais para analisar em tempo real o que esta acontecendo com seu sistemas.
                     </h4>
                     <button onclick="controlaDialog('dialog-msp')" class="bt-dialog">
                         <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
@@ -281,7 +251,13 @@
                     <dialog id="dialog-msp" class="dialog-produtos">
                         <button onclick="fechaDialog()">X</button>
                         <p>
-                            MSP Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                            Quando se trata de atendimento técnico para a sua empresa atualmente existem dois modelos, o break-fix (quebrou-consertou) e o MSP (Provedores de Serviços Gerenciados).
+                        </p>
+                        <p>
+                            No modelo break-fix o suporte técnico é acionado após o problema acontecer e até que ele seja resolvido você fica com seu equipamento/sistema inoperante.
+                        </p>
+                        <p>
+                            Já no modelo MSP, a Bistec atua <strong>ativamente</strong>, utilizando ferramentas gerenciais, para analisar em tempo real o que está acontecendo com seu computador e sistemas. Dessa forma é possível sanar seus problemas <strong>mesmo que eles aconteçam.</strong>
                         </p>
                     </dialog>
                 </div>
@@ -290,9 +266,9 @@
         <section class="bistec-produtos" id="bistec-msp">
             <img src="assets/images/img-lg-bistec-wifi.png" alt="Bistec wifi">
             <div class="texto-produtos">
-                <h2>Vestibulum accumsan sem ornare libero sodales elementum</h2>
+                <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
                 <h4>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    Tudo que a sua empresa precisa para ter uma rede wi-Fi com alto desempenho e de qualidade.
                 </h4>
                 <button onclick="controlaDialog('dialog-wifi')" class="bt-dialog">
                     <span class="button_icon"><ion-icon name="information-circle-outline"></ion-icon></span>
@@ -300,11 +276,17 @@
                 </button>
                 <dialog id="dialog-wifi" class="dialog-produtos">
                     <button onclick="fechaDialog()">X</button>
+                    <h2>Bistec Wifi</h2>
+                    <h3>Chega de sinal fraco, Bistec Wi-fi é a solução que o seu negócio precisa!</h3>
                     <p>
-                        Wifi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                        Esta solução é tudo que a sua empresa precisa para ter uma rede wi-fi com alto desempenho e qualidade, assim obtendo uma ótima experiência de navegação. Temos soluções para projetos de baixa e média complexidade:
                     </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    <ul>
+                        <li>Gerenciamento Cloud;</li>
+                        <li>Login Social – Liberado por meio do check-in nas principais redes sociais, Linkedin, Facebook, Instagram, etc;</li>
+                        <li>Splash Pages – Anúncios e propagandas;</li>
+                        <li>Dashboard Analytics.</li>
+                    </ul>
                     </p>
                 </dialog>
             </div>
@@ -403,6 +385,8 @@
                 document.getElementsByTagName('html')[0].setAttribute("onclick", "fechaDialog()")
             }, "100")
         }
+        
+        window.matchMedia('()')
     </script>
 </body>
 </html>
