--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início - Bistec Portugal</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/styleMobile.css">
+    <link rel="stylesheet" href="./assets/css/styleTablet.css">
+    <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
+    <link rel="stylesheet" href="./assets/css/styleTv.css">
     <link rel="icon" href="assets/images/logo-bistec-favicon.png">
 </head>
 <body>
