atualiza texto sobre GDPR

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="texto-produtos">
                 <h2>Adeque sua empresa ao GDPR</h2>
                 <h4>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                    Estar preparado para cumprir o Regulamento Geral de Proteção de Dados e proteger contra multas e fugas de informações de terceiros
                 </h4>
                 
                 <button onclick="openModal('modal-gpdr')" class="bt-dialog">
@@ -201,7 +201,10 @@
                         </div>
                         <div class="modal-body">
                             <p>
-                                GPDR Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementumLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit aliquam quam id accumsan. Vestibulum accumsan sem ornare libero sodales elementum
+                                A GDPR (General Data Protection Regulation) 2016/679 é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
+                            </p>
+                            <p>
+                                A GDPR define multas, sanções e processos cível aos controladores e operadores que não cumpram as suas bases legais, de acordo com o tipo de evento e gravidade.
                             </p>
                         </div>
                         <div class="modal-footer">
