--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 <body>
     <!-- cabeçalho -->
 
-    <header class="header-bistec" id="first_section">
-            <a href="#first_section" class="logo-bistec"><img src="assets/images/logo-bistec.png" alt="Logo - Bistec"></a>
+    <header class="header-bistec">
+            <a href="#first_section" class="logo-bistec">
+                <img src="assets/images/logo-bistec.png" alt="Logo - Bistec">
+            </a>
             <ul class="normal-menu">
-                <li><a href="#first_section" class=" normal">HOME</a></li>
                 <li>
+                    <a href="#first_section" class=" normal">HOME</a>
+                </li>
+                <li><!--Portifólio-->
                     <a href="#bistec-automaçao" class=" normal">PORTFÓLIO <ion-icon name="chevron-down-outline"></ion-icon></a>  
                     <ul class="normal-submenu">
                         <li><a href="#bistec-automaçao"><ion-icon name="at-sharp"></ion-icon> BISTEC AUTOMAÇÃO</a></li>
@@ -33,10 +37,10 @@
                         <li><a href="#bistec-wifi"> <ion-icon name="wifi-sharp"></ion-icon> BISTEC WIFI</a></li>
                     </ul> 
                 </li>
-                <li><a href="#contacts_section" class=" normal">CONTATO</a></li>
-            </ul>
-            <ul class="buttons-menu">
                 <li>
+                    <a href="#contacts_section" class=" normal">CONTATO</a>
+                </li>
+                <li><!--Butão de Loja-->
                     <a href="https://www.cupomfiscaleletronico.com.br/" target="_blank">
                         <button type="button" class="button" >
                             <span class="button_icon"><ion-icon name="cart-outline"></ion-icon></span>
@@ -44,7 +48,7 @@
                         </button>
                     </a>
                 </li>
-                <li>
+                <li><!--Botão Suporte-->
                     <a href="https://www.bistec.com.br/suporte/" target="_blank">
                         <button type="button" class="button_support">
                             <span class="button_icon support_icon"><ion-icon name="headset-outline"></ion-icon></span>
@@ -55,15 +59,13 @@
             </ul>
             <ul class="menu-cell">
                 <li>
-                    <a href="#">
-                        <ion-icon name="menu-outline" onkeypress="teste()" onclick="menuResponsive()"></ion-icon>
-                    </a>                    
+                    <ion-icon name="menu-outline" onkeypress="teste()" onclick="menuResponsive()"></ion-icon>                  
                 </li>
             </ul>
     </header>
 
     <!-- CORPO -->
-    <article>
+    <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
             <img src="assets/images/bg-bondinho.png" alt="Imagem de fundo com mascara de cor vermelha, mostrando um bondinho de portugal">
